Trying to fix image issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
   height: 100vh;
   overflow: hidden;
   scroll-snap-align: start;
+  scroll-snap-stop: always;
   /* background-image: none; */
   background-position: center center;
   background-repeat: no-repeat;
